--- a/admin/package.json
+++ b/admin/package.json
@@ -6,19 +6,21 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.18",
-    "@mui/material": "^5.14.18",
+    "@mui/material": "^5.15.2",
     "@mui/styled-engine": "^5.14.18",
     "@mui/system": "^5.14.18",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^10.6.0",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.10.1",
     "web-vitals": "^2.1.4",
+    "yup": "^1.3.3",
     "zustand": "^4.4.6"
   },
   "scripts": {
